force-app/main/default/objects/Contract_Request__c/fields/Test_Conga__c.field-meta.xml
<CustomField>
    <fullName>Test_Conga__c</fullName>
    <formula>HYPERLINK(&quot;https://composer.congamerge.com/?SessionId=&quot;+ $Api.Session_ID + &quot;&amp;ServerURL=&quot; + $Api.Partner_Server_URL_290 + Conga_eFax_Email_Contract_to_Legal_URL__c, &quot;Test Conga&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Conga</label>
    <type>Text</type>
</CustomField>