force-app/main/default/objects/Contract_Request__c/fields/Type_of_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Pricing__c</fullName>
    <label>Type of Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Tiered Pricing</fullName>
                <default>true</default>
                <label>Not Tiered Pricing</label>
            </value>
            <value>
                <fullName>Red Pepper</fullName>
            </value>
            <value>
                <fullName>Red Pepper Aggregate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>