force-app/main/default/objects/Contract_Request__c/recordTypes/eFax_Corporate_SOF.recordType-meta.xml
<RecordType>
    <fullName>eFax_Corporate_SOF</fullName>
    <active>true</active>
    <description>eFax Corporate Service Order Form</description>
    <label>eFax Corporate SOF</label>
</RecordType>