force-app/main/default/objects/Contract_Request__c/recordTypes/eFax_Corporate_SOF_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>eFax_Corporate_SOF_Read_Only</fullName>
    <active>true</active>
    <description>eFax Corporate SOF Read Only</description>
    <label>eFax Corporate SOF Read Only</label>
</RecordType>