force-app/main/default/objects/Contract_Request__c/recordTypes/New_Amendment.recordType-meta.xml
<RecordType>
    <fullName>New_Amendment</fullName>
    <active>true</active>
    <label>New Amendment</label>
</RecordType>