force-app/main/default/objects/Contract_Request__c/recordTypes/New_Developer_Agreement.recordType-meta.xml
<RecordType>
    <fullName>New_Developer_Agreement</fullName>
    <active>true</active>
    <label>New Developer Agreement</label>
</RecordType>