force-app/main/default/objects/Contract_Request__c/recordTypes/New_eFax_Corporate_Agreement.recordType-meta.xml
<RecordType>
    <fullName>New_eFax_Corporate_Agreement</fullName>
    <active>true</active>
    <label>New eFax Corporate Agreement</label>
</RecordType>