force-app/main/default/objects/Contract_Request__c/validationRules/Date_Amendment_Term_Begins_1st_of_month.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Amendment_Term_Begins_1st_of_month</fullName>
    <active>true</active>
    <description>The Date Amendment Term Begins must be the first of the month.</description>
    <errorConditionFormula>DAY(Date_Amendment_Term_Begins__c)&lt;&gt;1</errorConditionFormula>
    <errorDisplayField>Date_Amendment_Term_Begins__c</errorDisplayField>
    <errorMessage>Must be the first day of the month.</errorMessage>
</ValidationRule>